Fix static images names

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -28,10 +28,10 @@
 <div class="slider">
 
     <div class="slides">
-        <img src="{% static 'images/slide_welcome.PNG' %}">
-        <img src="{% static 'images/slide1.PNG' %}">
-        <img src="{% static 'images/slide2.PNG' %}">
-        <img src="{% static 'images/slide3.PNG' %}">
+        <img src="{% static 'images/slide_welcome.png' %}">
+        <img src="{% static 'images/slide1.png' %}">
+        <img src="{% static 'images/slide2.png' %}">
+        <img src="{% static 'images/slide3.png' %}">
     </div>
 
 </div>
