--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -30,7 +30,7 @@
     <div class="slides">
         <img src="{% static 'images/slide_welcome.png' %}">
         <img src="{% static 'images/slide_1.png' %}">
-        <img src="{% static 'images/slide2.png' %}">
+        <img src="{% static 'images/slide_2.png' %}">
         <img src="{% static 'images/slide_3.png' %}">
     </div>
 
