--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -26,10 +26,10 @@
 <!-- ===== SLIDER SECTION ===== -->
 <div class="slider">
     <div class="slides">
-        <img src="{% static 'images/slide_welcome.png' %}">
-        <img src="{% static 'images/slide_1.png' %}">
-        <img src="{% static 'images/slide_2.png' %}">
-        <img src="{% static 'images/slide_3.png' %}">
+        <img src="{% static 'images/slider_welcome.png' %}">
+        <img src="{% static 'images/slider_1.png' %}">
+        <img src="{% static 'images/slider_2.png' %}">
+        <img src="{% static 'images/slider_3.png' %}">
     </div>
 </div>
 
